@@ -74,7 +74,7 @@ div, form
     padding-left: 15px;
     padding-bottom: 25px;
 }
-#maincontainer div.subcontainer
+div.subcontainer h1
 {
     text-decoration: underline;
     font-size: x-large;
