@@ -124,3 +124,11 @@ HORAS TRABALHADAS: 6h
 - Bugfixes no dashboard (IE)
 
 HORAS TRABALHADAS: 4h
+
+==========
+20/05/2009
+==========
+
+- Ajustes na barra de queue
+
+HORAS TRABALHADAS: 3h
